Inital Swagger/Auth fix
