# server.ts
@@ -1,7 +1,6 @@
 /* eslint-disable no-console */
 import "dotenv/config";
 import express from "express";
-import { Request, Response, NextFunction } from "express";
 import cors from "cors";
 import bodyParser from "body-parser";
 import passport from "passport";
@@ -16,7 +15,7 @@ const host = process.env.HOST || "localhost";
 
 // CORS Configuration
 const corsOptions = {
-    origin: ["http://localhost:3000", "http://127.0.0.1:3000"], // Allow your frontend to make requests
+    origin: ["http://localhost:3000"], // Allow your frontend to make requests
     credentials: true, // Allow cookies to be passed with requests
 };
 
@@ -30,7 +29,8 @@ app.use(
     session({
         secret: process.env.SESSION_SECRET || "keyboard cat",
         resave: false,
-        saveUninitialized: false,
+        saveUninitialized: true,
+        cookie: { secure: false }, // Set to true if using HTTPS
     }),
 );
 
@@ -38,33 +38,21 @@ app.use(
 app.use(passport.initialize());
 app.use(passport.session());
 
-// Protect non-GET routes globally before applying routes
-app.use((req: Request, res: Response, next: NextFunction) => {
-    console.log(`Request method: ${req.method}`); // Log the method
-    if (req.method === "GET") {
-        return next(); // Allow GET requests for everyone
-    }
-
-    if (req.isAuthenticated()) {
-        return next(); // Allow non-GET requests if user is authenticated
-    }
-
-    // If the user is not authenticated and is trying a non-GET request
-    res.status(401).json({ message: "Unauthorized: Please log in first." });
-});
-
-// Register authentication routes first (public)
-app.use("/authentication", router);
-
 // Register all other routes
 app.use(router);
+
+//Log session
+app.use((req, res, next) => {
+    console.log("Session:", req.session);
+    console.log("User:", req.user);
+    next();
+});
 
 // Initialize the database
 if (process.env.NODE_ENV !== "test") {
     InitializeDatabase()
         .then(() => {
             app.listen(port, () => {
-                console.log(`Server is running on ${host}:${port}`);
                 console.log(
                     `Swagger Docs available at http://${host}:${port}/api-docs`,
                 );
